--- a/config/webapp.json
+++ b/config/webapp.json
@@ -1,8 +1,1 @@
-{
-    "ip":"0.0.0.0:5000",
-    "outip":"192.168.1.15:5000",
-    "code-server-port":"5002~5010",
-    "user-dir":"/home/code-server-dir",
-    "user-group":"webapp",
-    "keeptime":10
-}
+{"ip": "0.0.0.0:5000", "outip": "0.0.0.0:5000", "code-server-port": "5002~5010", "user-dir": "/home/code-server-dir", "user-group": "webapp", "keeptime": 10, "cansignup": "false"}
