--- a/config/webapp.json
+++ b/config/webapp.json
@@ -1,1 +1,9 @@
-{"ip": "0.0.0.0:5000", "outip": "0.0.0.0:5000", "code-server-port": "5002~5010", "user-dir": "/home/code-server-dir", "user-group": "webapp", "keeptime": 10, "cansignup": "false"}
+{
+    "ip": "0.0.0.0:5000", 
+    "outip": "0.0.0.0:5000", 
+    "code-server-port": "5002~5010", 
+    "user-dir": "/home/code-server-dir", 
+    "user-group": "webapp", 
+    "keeptime": 10, 
+    "cansignup": "true"
+}
